fix: add overflow to review

--- a/client/src/application/main/components/movie-page/movie-content/movie-content.scss
+++ b/client/src/application/main/components/movie-page/movie-content/movie-content.scss
@@ -151,7 +151,7 @@
     color: #333;
     height: 500px;
     word-wrap: break-word;
-    // overflow: hidden;
+    overflow: hidden;
     padding: 20px;
     text-align: left;
     transition: .3s;
